--- a/Client/package.json
+++ b/Client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.81.2",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "hamburger-react": "^2.5.2",
@@ -19,7 +20,8 @@
     "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "stream-chat-react": "^13.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
