--- a/Client/package.json
+++ b/Client/package.json
@@ -21,6 +21,8 @@
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "stream-chat-react": "^13.2.1"
   },
   "devDependencies": {
